--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "bootstrap": "^5.3.8",
+    "leaflet": "^1.9.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-leaflet": "^5.0.0",
+    "react-router-dom": "^7.9.4",
     "react-scripts": "5.0.1",
+    "sass": "^1.93.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -41,5 +45,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.9.21",
+    "@types/react-router-dom": "^5.3.3"
   }
 }
